# ChangeLog for dev-perl/Lab-Measurement
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Lab-Measurement/ChangeLog,v 1.25 2015/04/07 13:40:50 dilfridge Exp $

  07 Apr 2015; Andreas K. Huettel <dilfridge@gentoo.org>
  Lab-Measurement-9999.ebuild:
  Add missing dependency

  05 Apr 2015; Andreas K. Huettel <dilfridge@gentoo.org>
  -Lab-Measurement-3.310.0.ebuild:
  Remove old

  25 Jul 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  Lab-Measurement-3.310.0.ebuild, Lab-Measurement-3.320.0.ebuild,
  Lab-Measurement-9999.ebuild:
  Switch is moved to dev-perl

  05 Jul 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  Lab-Measurement-3.310.0.ebuild, Lab-Measurement-3.320.0.ebuild,
  Lab-Measurement-9999.ebuild:
  Class-ISA moved to dev-perl

  29 Jun 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  Lab-Measurement-3.310.0.ebuild, Lab-Measurement-3.320.0.ebuild,
  Lab-Measurement-9999.ebuild:
  perl-core/Switch is the only Switch provider since perl-5.14

*Lab-Measurement-3.320.0 (25 Jun 2014)

  25 Jun 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  +Lab-Measurement-3.320.0.ebuild:
  Version bump

  23 Apr 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  -Lab-Measurement-3.200.0.ebuild:
  Remove old

  12 Mar 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  Lab-Measurement-9999.ebuild:
  Update Git URL to github

*Lab-Measurement-3.310.0 (07 Mar 2014)

  07 Mar 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  +Lab-Measurement-3.310.0.ebuild, -Lab-Measurement-3.110.0.ebuild,
  Lab-Measurement-9999.ebuild:
  Version bump; remove old

*Lab-Measurement-3.200.0 (19 Oct 2013)

  19 Oct 2013; Andreas K. Huettel <dilfridge@gentoo.org>
  +Lab-Measurement-3.200.0.ebuild:
  Version bump

  07 Oct 2013; Andreas K. Huettel <dilfridge@gentoo.org>
  Lab-Measurement-9999.ebuild:
  Update live ebuild dependencies

*Lab-Measurement-3.110.0 (04 Sep 2013)

  04 Sep 2013; Andreas K. Huettel <dilfridge@gentoo.org>