@@ -2,26 +2,28 @@
 Hash: SHA256
 
 DIST Lab-Measurement-3.32.tar.gz 369238 SHA256 2006fb6c416247bad7acf46e75c9079194b258f344d29d7a3933c7de8669fa67 SHA512 64c197b7f39555d183de9d5277f92d467ff4cad03b19a6a8cd7e6608fbb850100a5ad99499a477b93ff3c364ffa4214fdca3b5d36c5ce138449f6c3261f3247d WHIRLPOOL 254bf7aa754887d4110dbca8e10620427db50dea450fe1a01f555f6851926123a4b6cca82b0c0a133803fed8a4c7537be3dfb38642a1b182882b4bcf87b3de59
+DIST Lab-Measurement-3.41.tar.gz 381680 SHA256 38044abae96872bd1717cd9ad38dbb5075dbe458c72349ebfbeae1380d0f1c7f SHA512 21de97972cdc463762d6da83ba15b9407621c3416c19e86ca25ddd05592133811e81950350ecfd0e571dc1e6c8ba3df1ff4daf88d6537af69e5ab5e611820171 WHIRLPOOL bea1c57b5968397b1325068577d12c148933007a434272571e5bfd5ec14ebc6f7cccad78f06db261dc0bebfd41c8a74271a27d6bfa639891809e7225ffdb48c6
 EBUILD Lab-Measurement-3.320.0.ebuild 1758 SHA256 443ec47c61a20038849cb8e21c784ab4fd292937ad1bbfd2ff02bf9dbc4d5908 SHA512 3a8b636504055c660c609af016d8659d3d47181ed458d9bad8a2451b82a5805a660c9bc32ba14f48b221deb753c015c9601d8c3230c9749d38660475fd39fe5c WHIRLPOOL 747a4e9daecb5b8bb7cad6d930fdf95256071b7c0ca169b954b06a05948bfe126a50a04049b82b9de262bf75b52bd9d30a382b62503c089af911e82311654a3d
-EBUILD Lab-Measurement-9999.ebuild 1799 SHA256 fc672ebdc88aebac28fe5bec17f742b323cf2bcbe7c8a75734e92984db8047b8 SHA512 7d94e7ea462382d1d4dff6188b78bf57e74d783d2d070cf00cab5e061bf0f4a8f8709ed825ee7147ef3a8b15cd122d0139d10582072637583544150eb6429a4f WHIRLPOOL 106c8b8364b4a1910aab78cb9735b0c2bec8030bae6f43381ca37f613fecd46e759b8016b9d6d4491694d8833a5217c80e8be67ee8dc5207723b50ff10836564
-MISC ChangeLog 4205 SHA256 53d702e5399698b76fc9357376e708f42e61c88dd9b130b3037f36bfdf01cfb0 SHA512 dd9f9d4bc154bb18472d6f6a3d3109e4a1b1781876cdadc6f9b43c758bc93d980fac1f0b5d482ff261d30b11eae96d87ea4e746cfd4cbfd6839e09a7d33fe8c5 WHIRLPOOL 5761e91210a545a84cdf2becfbca2ad1496cfe7590d6b6c00516ea7695401b8c717812fd61f266587d5c1c7e7649b9113c1bb77d437339d668ab1b51012ceec6
+EBUILD Lab-Measurement-3.410.0.ebuild 1788 SHA256 ab96c4ad84aab55b48c8b0cc2489ed4181d8a113aeb98188d164c569fc2b91c2 SHA512 01bb4758f0579537d609b9d9afc5c89de0e26b00068e35210a1be523910a7460a246d47f9083646315c0d6858f921cba0ffb9bc89bf6a5dd3f5f92faf6c42016 WHIRLPOOL 6c769efede605e3cfb2c1d89e84cf8fe84dc740cd5be82994ff304e41ec54b9836b539e69ea83ad65196a85e24a7d0745e7254837a39aaa5c23eecc858b09dde
+EBUILD Lab-Measurement-9999.ebuild 1710 SHA256 49a78edb47465f992f795a434e7dfadfc581fa331703485cdcd4f81c5cb788c5 SHA512 ad252179d71c871abd49c6c4cb5a19462c899bdf0edfd60e1e40dc6cd435621ed48e8a8a473aa6cb4ff56c0cfa7d9365094250f0ec23c087c298a49a9ffc10f5 WHIRLPOOL a43cbeedc31a2ebf50a9fb428501cd3e1da21cb5b9c927b33146f5d901ef7c5d6444f007fdc6e015920877ea376841b07a2b89879b351efdf9534d9de96479d0
+MISC ChangeLog 4382 SHA256 d9f00ee72631e52bdf24e2c4be624184c84650de6361a9fb102e3609523afbd4 SHA512 c070e17b15cb19564581add1f619189fdc7cf0db1b697be856e72ce99fc6e974dbbdc29e687933893cc666ece00216f6b9ebc0ea67b0d5f41c52265aaadfebfc WHIRLPOOL 0c3ee49e42c4da3db90b33cbc34b2d95e88bee92b425aad9f956ddfbbb1d83e3595d46e45648950b1d2afb71fa5e8ed87ab89d94d5f93d64515a0de831450c05
 MISC metadata.xml 3111 SHA256 fb9894e6d09bd7986764457081774179a4823ee57d7bacee4fed1bb60a305768 SHA512 87ff272688fcb9841c00aa3cb167047c9653c7e9953af8f06d0d0b9044a0f72f3cadfe81fb7811ff128e93174a84c09e1238314cb7abde4baa3e21771fc23ce9 WHIRLPOOL 89e5d8d81cd232a7b191735cf8b7c4a5c3b9b3b66a46371a51adfed4cb2c26627bf07b62ac7d28f756abb0641a5366da3ec1d0098663ab7f645aa8759440113a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCABmBQJVI92kXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXRCMkRCMDNGRDg4MkUwQTczOTgwMkE3RUEx
-RjU1NzRDRUExQkE5Mjk1AAoJEB9VdM6hupKVvMgP/RFSZrPpbrbZlqIyMFkGwg7c
-iL8zBS4t+xt5faDasD71Xl4vyUNWmAbQt8DuIVjfIJplRROjULe0a75D4epaq5DS
-rcuhNptBQJ9hmu2bN0c9khrlWY87MEM/MoElXGRq+dj3KJ8IyS17bSi8zasHWRvX
-3wlc0e2CWGbeVxCQV/Ir78SkUH6WH5SS+JAlYrkrXhkMgQlko6bso3z055iBwhLP
-cgyZfZqyGOv3llLoNwdQvSRHAmipzFOonBC5BHGn05b/AuMJoUx00ExWSZLm9evK
-I+m0FmL4cTFSO7n0A4M7jWQLMHxP06yPxTZkMy0spFcx5cAgiMwwH7TgU655ADMt
-25WcPj3DdwPK+CL5WPbut9+GKbfu7GWKcizun/uJQg64Vmd+wmdQwnbz6gQsduf0
-VZdE18sJ9aODuhLe4/78GeJ3eBjFnetEGllu7k3BbEOitoLjTVrWdbtBc0Sbq37d
-f3sWbLA6eH5syk0/vK3GSRRz79WNhDudScR6wqEg8BVhrP1RAusDpOpI2SpIJZTS
-C+09iioWlEfda2dZWEfvod8NJ65w4lRQeU+yDQGUGWgLJbo1Q6osyXLRm860vLcY
-+4PWQD37sE7Y6MCwWOUb2BswYlh/q8wwJSSc78dn6d958Wa7bMy8Svbrca6kx1fh
-sCghB/vPqP+dN0EUqZ/t
-=1MFa
+iQJ8BAEBCABmBQJVJGldXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0RkJDMzI0NjNBOTIwMDY5MTQ2NkMzNDBF
+MTM4NkZEN0VGNEI1Nzc5AAoJEOE4b9fvS1d5bD8QAKspMDZJrwOk/1pOAjhIo9ec
+VU13Zjlxs43aEE/q/lGzCo1yX4MwEKFcETmQPvEMFp11DcHsatq9zjJCzk0Te9hT
+M2HY4ykMbIHH5NkoI2MpZhU2GiNYDmJoAYtPwp7eK/xM2o5OcM+JLPVoIWEfCZ+F
+osChsX8gjU5gRKm+rOCE4gJC1rDgn5ZQJqNdfIOyObLzRKA90iedJIEt+6DeYSXh
+7jIwJS5acg+LJwhJFAjouH4gzfEpKPbDM37Rx68egI/lphqi510hdSnvRjqUUKGm
+pAG6pZFmMEYx9NKFNbI+gUdI1UvMqRX3dYK8OmbSxFO/mS71TgmkMY5B0AiTUpJA
+q3bUt+lDn89nowAepq+3tF5IrOr6ydAd0ikm+hN5Hoqd04PgQIOTmFMwglJyx+Oc
+QvVpZwmqgWMcyHbV/QOtNpWtLJSq8DbpAVo+m+Z2jmNqog2kAYzOax3oLqB026hE
+FsCjPgjAsRuM++ZyNm/OlG/uB1uIDJe64LPxqND/We095ZdlXtI3bq5SI4344c22
+iqeat2bcWQm4SfUWrJC/ybRQLgTSf/QvKMAkk58BPtV5uZmcB7s9OBgjoxYVbFox
+B8VDWvftCuljysY4fJYZs/LlJfoOW5xoedskN+kRoA8899NhmeKJ3oH5cVzvWGPT
+gyhHjkgseNmbMJRWcpiM
+=p3ut
 -----END PGP SIGNATURE-----
