@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/Lab-Measurement
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Lab-Measurement/ChangeLog,v 1.25 2015/04/07 13:40:50 dilfridge Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Lab-Measurement/ChangeLog,v 1.26 2015/04/07 23:33:43 dilfridge Exp $
+
+*Lab-Measurement-3.410.0 (07 Apr 2015)
+
+  07 Apr 2015; Andreas K. Huettel <dilfridge@gentoo.org>
+  +Lab-Measurement-3.410.0.ebuild, Lab-Measurement-9999.ebuild:
+  Version bump
 
   07 Apr 2015; Andreas K. Huettel <dilfridge@gentoo.org>
   Lab-Measurement-9999.ebuild:
